--- a/css/registration.css
+++ b/css/registration.css
@@ -1,4 +1,4 @@
-.authorization-container{
+.registration-container{
     width: min-content;
     margin: 50px auto;
 }
@@ -7,7 +7,7 @@
     font-size: 60px;
 }
 
-.authorization-input{
+.registration-input{
     color: #AFAFAF;
     background-color: #14191B;
     border-color: #14191B;
@@ -18,16 +18,11 @@
     font-size: 15px;
 }
 
-.authorization-button{
+.registration-button{
     background-color: #CB4F19;
     width: 455px;
     height: 70px;
     font-size: 16px;
     border-color: #CB4F19;
     border-radius: 10px;
-}
-
-.additional-link{
-    font-size: 16px;
-    margin-right: 25px;
 }
