--- a/css/personal-account.css
+++ b/css/personal-account.css
@@ -1,96 +1,105 @@
-.site-name {
-    margin: 0 10%;
-    display: flex;
-    padding: 50px 0;
-    z-index: 2;
+.main-container{
+    width: 72vw;
 }
 
-.site-name h1 {
-    font-style: normal;
-    font-weight: 700;
+.main-title{
     font-size: 70px;
-    line-height: 85%;
-    letter-spacing: 0.05em;
 }
 
-.header-containers {
-    margin: 0 10%;
-    justify-content: space-between;
+.up-blocks-container{
     display: flex;
-    flex-direction: row;
-    padding: 50px 0;
 }
 
-.container {
-    display: block;
+.up-block-container{
     background-color: #14191B;
-    margin-left: 30px;
-    padding: 50px;
+    width: 440px;
+    height: 360px;
+    margin: 15px auto;
 }
 
-.header-container-info {
-    padding: 30px 0;
+.up-block-container2{
+    width: 310px;
+    height: 195px;
+    margin: 80px auto;
 }
 
-.header-container-info h2 {
-    font-style: normal;
-    font-weight: 500;
+.up-block-data-container{
+    display: flex;
+}
+
+.up-block-data-img{
+    width: 80px;
+    height: 80px;
+    padding: 30px 30px 30px 0;
+}
+
+.up-block-data-icon-img{
+    width: 30px;
+    height: 30px;
+    padding: 30px 30px 30px 0;
+}
+
+.up-block-user-data-container{
+    margin: auto 0;
+}
+
+.up-block-title{
     font-size: 32px;
-    line-height: 100%;
-    letter-spacing: 0.05em;
 }
 
-.middle-container-info {
-    display: flex;
-    align-items: center;
+.up-block-data-name{
+    margin: auto 0;
 }
 
-.middle-container-info img {
-    width: 9%;
-    border-radius: 50%;
+.up-block-user-date{
+    color: #AFAFAF;
+    padding-top: 10px;
 }
 
-.container-info {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 110%;
-}
-
-.container-info p {
-    padding: 9px 30px;
-}
-
-.container-info a {
-    display: block;
-    padding: 20px 30px;
-}
-
-.container-info-link {
-    text-decoration-line: underline;
+.edit-data{
     color: #039FD4;
+    text-decoration: underline;
 }
 
-.footer-containers {
-    margin: 0 15%;
-    justify-content: space-between;
+.down-blocks-container{
     display: flex;
-    flex-direction: row;
-    padding: 50px 0;
+    margin: auto auto;
+    width: 100%;
 }
 
-. img {
-    width: 5%;
-    border-radius: 50%;
+.down-block-container{
+    background-color: #14191B;
+    margin: 15px auto;
+    width: 440px;
+    height: 310px;
 }
 
-.button {
-    width: 150px;
-    height: 70px;
-    background: #CB4F19;
-    border-radius: 10px;
-}
-
-.blue {
+.other-down-block-container{
     background: linear-gradient(180deg, #0089B1 0%, #004A64 100%);
+    margin: 15px auto;
+    width: 440px;
+    height: 310px;
+}
+
+.down-block-container2{
+    width: 310px;
+    height: 195px;
+    margin: 80px auto;
+}
+
+.down-block-title{
+    font-size: 32px;
+}
+
+.down-block-button{
+    background-color: #CB4F19;
+    padding: 25px 60px;
+    border-radius: 10px;
+    border-color: #CB4F19;
+    font-size: 16px;
+}
+
+.other-down-block-button{
+    width: 50px;
+    height: 50px;
 }
